Fixed last TerminalBuffer tests regarding resize function.